--- a/src/common/styles/animation.css
+++ b/src/common/styles/animation.css
@@ -1,23 +1,3 @@
-.max-width{
-    max-width: 70%;
-    margin: auto;
-}
-.flex{
-    display: flex;
-
-}
-
-.absolute-center{
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-col{
-    flex-direction: column;
-}
-
-
-/* mobile */
 .hamburger {
     padding: 15px 15px;
     display: inline-block;
@@ -31,7 +11,9 @@
     background-color: transparent;
     border: 0;
     margin: 0;
-    overflow: visible; }
+    overflow: visible; 
+    z-index: 2;
+}
     .hamburger:hover {
       opacity: 0.7; }
     .hamburger.is-active:hover {
@@ -42,8 +24,8 @@
       background-color:var(--white); }
   
   .hamburger-box {
-    width: 40px;
-    height: 24px;
+    width: 35px;
+    height: 21px;
     display: inline-block;
     position: relative; }
   
@@ -52,7 +34,7 @@
     top: 50%;
     margin-top: -2px; }
     .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-      width: 40px;
+      width: 35px;
       height: 4px;
       background-color: var(--white);
       border-radius: 4px;
@@ -89,31 +71,4 @@
       bottom: 0;
       transform: rotate(-90deg);
       transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
-
-
-
-@media all and (max-width:1279px){
-    .max-width{
-        max-width: 80%;
-
-    }
-}
-
-@media all and (max-width:767px){
-    .max-width{
-        max-width: 90%;
-
-    }
-    .non-mobile{
-        display: none !important;
-    }
-}
-
-
-/* evrry mobile */
-@media all and (min-width:766px){
-    .only-mobile{
-        display: none !important;
-    }
-}
 
