--- a/src/common/styles/commonClasses.css
+++ b/src/common/styles/commonClasses.css
@@ -16,6 +16,13 @@
     flex-direction: column;
 }
 
+/* footer */
+.footer{
+  font-weight: 600;
+  padding: 0px 0px 20px;
+  font-size: 40px;
+}
+
 
 /* Feel Special component some common css */
 .photo-section{
@@ -148,6 +155,9 @@
     .photo-section-child{
       padding: 100px 0px;
     }
+    .footer{
+      font-size: 32px;
+    }
 }
 
 @media all and (max-width:767px){
@@ -176,6 +186,9 @@
     }
     .photo-section-child{
       padding: 195px 0px 90px;
+    }
+    .footer{
+      font-size: 20px;
     }
 }
 
